# ChangeLog for sys-apps/less
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/less/ChangeLog,v 1.50 2005/12/24 15:40:08 hansmi Exp $

  24 Dec 2005; Michael Hanselmann <hansmi@gentoo.org> less-385_p4-r2.ebuild:
  Stable on ppc.

  21 Dec 2005; Marcus D. Hanwell <cryos@gentoo.org> less-385_p4-r2.ebuild:
  Stable on amd64.

  18 Dec 2005; Markus Rothe <corsair@gentoo.org> less-385_p4-r2.ebuild:
  Stable on ppc64

  05 Dec 2005; Gustavo Zacarias <gustavoz@gentoo.org> less-385_p4-r2.ebuild:
  Stable on sparc

  03 Dec 2005; Andrej Kacian <ticho@gentoo.org> less-385_p4-r2.ebuild:
  Stable on x86, bug #114301.

*less-393 (02 Dec 2005)

  02 Dec 2005; Mike Frysinger <vapier@gentoo.org> +less-393.ebuild:
  Version bump #113085 by Benno Schulenberg.

*less-385_p4-r2 (16 Oct 2005)

  16 Oct 2005; Mike Frysinger <vapier@gentoo.org> files/lesspipe.sh,
  +less-385_p4-r2.ebuild:
  Tweak the manpage case in lesspipe.sh to display compressed text files which
  are named funny #109419.

  17 Sep 2005; Ciaran McCreesh <ciaranm@gentoo.org> ChangeLog:
  Converted to UTF-8, fixed encoding screwups

*less-385_p4-r1 (24 Aug 2005)

  24 Aug 2005; Mike Frysinger <vapier@gentoo.org> +files/code2color.patch,
  +less-385_p4-r1.ebuild:
  Add support for more filetypes and colorize support #46587 by José Romildo
  Malaquias.

  18 Aug 2005; Mike Frysinger <vapier@gentoo.org> less-382-r2.ebuild,
  less-385.ebuild, less-385_p4.ebuild:
  Add a PROVIDE for virtual/pager.

*less-385_p4 (19 Jun 2005)

  19 Jun 2005; Mike Frysinger <vapier@gentoo.org> +less-385_p4.ebuild:
  Version bump with patch from Charles Levert.

  18 Jun 2005; Mike Frysinger <vapier@gentoo.org> files/lesspipe.sh:
  Import ideas from Redhats lesspipe.sh and add support for more files.

*less-385 (23 May 2005)

  23 May 2005; Mike Frysinger <vapier@gentoo.org> +less-385.ebuild:
  Version bump which have UTF8 fixes #93656 by Eugene Pavlovsky.
