@@ -1,0 +1,48 @@
+# Copyright 1999-2005 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/less/Attic/less-394.ebuild,v 1.1 2005/12/28 20:32:49 vapier Exp $
+
+inherit eutils
+
+DESCRIPTION="Excellent text file viewer"
+HOMEPAGE="http://www.greenwoodsoftware.com/less/"
+SRC_URI="http://www.greenwoodsoftware.com/less/${P}.tar.gz
+	http://www-zeuthen.desy.de/~friebel/unix/less/code2color"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
+IUSE="unicode"
+
+DEPEND=">=sys-libs/ncurses-5.2"
+PROVIDE="virtual/pager"
+
+src_unpack() {
+	unpack ${P}.tar.gz
+	cd "${S}"
+	cp "${DISTDIR}"/code2color "${S}"/
+	epatch "${FILESDIR}"/code2color.patch
+}
+
+yesno() { use $1 && echo yes || echo no ; }
+src_compile() {
+	export ac_cv_lib_ncursesw_initscr=$(yesno unicode)
+	export ac_cv_lib_ncurses_initscr=$(yesno !unicode)
+	econf || die
+	emake || die
+}
+
+src_install() {
+	dobin less lessecho lesskey code2color || die "dobin"
+	newbin "${FILESDIR}"/lesspipe.sh lesspipe.sh || die "newbin"
+
+	# the -R is Needed for groff-1.18 and later ...
+	echo 'LESS="-R -M --shift 5"' > 70less
+	doenvd 70less
+
+	for m in *.nro ; do
+		newman ${m} ${m/nro/1}
+	done
+
+	dodoc NEWS README*
+}
