@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/less
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/less/ChangeLog,v 1.50 2005/12/24 15:40:08 hansmi Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/less/ChangeLog,v 1.51 2005/12/28 20:32:49 vapier Exp $
+
+*less-394 (28 Dec 2005)
+
+  28 Dec 2005; Mike Frysinger <vapier@gentoo.org> +less-394.ebuild:
+  Version bump #116983 by Michael Cramer.
 
   24 Dec 2005; Michael Hanselmann <hansmi@gentoo.org> less-385_p4-r2.ebuild:
   Stable on ppc.
